hw/responsive/css/desktop.css
header{
  background-color:LightBlue;
  width:920px; height:auto;
  padding: 20px 20px 20px 20px;
  border-width: 1px 1px 0px 1px; border-color: black; border-style: solid;
  margin:0 auto;
  margin-top: 5px;
  text-align: justify;
}

main{
  background-color: SkyBlue;
  width:920px;
  height:auto;
  text-align: justify;
/* padding adds x pixels around each side of the text */
  padding:20px;
/* can adjust each side's padding individually */
  padding-top:20px;
  padding-right:20px;
  padding-bottom:20px;
  padding-left:20px;
/* add border around box on all sides */
  border-width:1px; border-style: solid; border-color: Black;
/* making the margins auto on the left/ right will center the box and have it move based on the size of the window */
  margin-top:0px;
  margin-right: auto;
  margin-bottom:0px;
  margin-left:auto;}

footer{
    background-color:LightBlue;
    width:920px; height:auto;
    margin-top:0px;
    margin-right: auto;
    margin-bottom:0px;
    margin-left:auto;
    padding:20px;
    border-width:0px 1px 1px 1px;
    border-style: solid;
    border-color: Black;
    text-align: justify;
     }

nav{
   background-color: LightCyan;
   border-width:1px;
   border-style: solid;
   border-color: black;
   width: 520px;
   height: auto;
/* this is how you center something */
       margin: 0 auto;}

nav ul li{
    list-style: none;
    display: inline-block;
    margin-right: 20px;
    padding: 5px;}

nav ul li a{
    color: navy;
    text-decoration: none;
    padding: 5px;}

nav ul li:hover{
    background-color: LightSteelBlue;}

#grid1{
    width: 800px; height: auto;
    margin: 20px 20px 20px 20px;
    display: grid;
    grid-template-rows: 270px;
    grid-template-columns: 290px 250px 240px;
    grid-column-gap: 20px;
    text-align: justify;
    }

#grid1 img{
  width: 290px;
  margin: 0 auto;
  display: block;
/* this is how you get text to line up with the top of the image */
  position:relative;
  top: 20px;
}

#grid2{
    width: 800px; height: auto;
    margin: 0 auto;
    display: grid;
    grid-template-rows: 450px;
    grid-template-columns: 280px 280px 20px;
    grid-column-gap: 20px;
    }

#grid2 p{
    width: 280px;
    height: 380px;
    margin: 0 auto;

        }

#grid2 img{
    width: 280px;
    height: 380px;
    margin: 0 auto;
    display: block;
    position:relative;
    }

#grid3{
  width: 800px; height: 270px;
  margin: 20px 20px 20px 20px;
  display: grid;
  grid-template-rows: 300px;
  grid-template-columns: 220px 290px 290px;
  grid-column-gap: 30px;
  text-align: justify;
    }

#grid3 img{
    width: 300px;
    margin: 0 auto;
    display: block;
    position:relative;
    top: 20px;
    }

#grid4{
  width: 800px; height: auto;
  margin: 20px 20px 20px 20px;
  display: grid;
  grid-template-rows: 420px;
  grid-template-columns: 220px 290px 300px;
  grid-column-gap: 40px;
  text-align: justify;
}

#grid4 img{
  width: 290px;
  margin: 0 auto;
  display: block;
  position:relative;
  top: 20px;
}

#center{
  text-align: center;
}

.border{
    border-width: 3px;
    height:auto;
    border-style: solid;
    border-color: black;
    margin-bottom: 20px;
}

.padding{
    padding: 0px 0px 0px 20px;}

/* filling in grids to be blue */
#bluedabadee{
    background-color: LightCyan;}
#DeepBlueSea{
    background-color: LightCyan;}
#BluesClues{
    background-color: LightCyan;}
#BlueEyesWannaDie{
    background-color: LightCyan;}


/* links to places on site */
#AlwaysOnTop{
    color: navy;}

#AlwaysOnTop:visited{
    color:navy;}

#AlwaysOnTop:hover{
    background-color: LightSteelBlue;}

/* added button to go to top of page */
#ButtonUp{
    background-color: LightCyan;
    border-width:1px;
    border-style: solid;
    border-color: black;
    width: 100px;
    height: auto;
    margin: 0 auto;
    padding: 10px 0px 10px 17px;}

